--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sections",
-  "description": "Manipulate sections in a string of markdown.",
+  "description": "Prepend, append or replace \"sections\" in a markdown string.",
   "version": "0.1.1",
   "homepage": "https://github.com/jonschlinkert/sections",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
