--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sections",
   "description": "Manipulate sections in a markdown string. A 'section' is a block of content preceded by a valid markdown ATX heading.",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/jonschlinkert/sections",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/sections",
@@ -48,5 +48,9 @@
     "reflinks": [
       "verb"
     ]
+  },
+  "dependencies": {
+    "define-property": "^0.2.5",
+    "gfm-code-blocks": "^0.3.0"
   }
 }
