--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "gulp-format-md": "^0.1.5",
-    "mocha": "*"
+    "gulp-format-md": "^0.1.7",
+    "mocha": "^2.4.5"
   },
   "keywords": [
     "format",
